<resources>
    <string name="app_name">Homework Planner</string>
    <string name="action_settings">Settings</string>
    <string name="add_class">Add Class</string>
    <string name="delete_class">Delete Class</string>
    <string name="delete_assignment">Delete Assignment</string>
    <string name="class_name">Class Name</string>
    <string name="class_name_info">%1$s</string>
    <string name="class_start_time">Class Start Time</string>
    <string name="class_end_time">Class End Time</string>
    <string name="class_days">Class Days</string>
    <string name="class_duration">Class Duration</string>
    <string name="class_credit">Credit Hours</string>
    <string name="pick_day">Pick Class Days</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="assignments">Assignments</string>
    <string name="assign_due_time">Assignment Due Time</string>
    <string name="assign_due_date">Assignment Due Date</string>
    <string name="assign_start_date">Assignment Start Date</string>
    <string name="assign_time_estimate">Time Estimate (in hours)</string>
    <string name="assign_completed">Assignment Completed</string>
    <string name="assign_time_spent">Actual Time Spent (in hours)</string>
    <string name="choose_start_time">Choose Start Time</string>
    <string name="choose_end_time">Choose End Time</string>
    <string name="choose_due_time">Choose Due Time</string>
    <string name="choose_due_date">Choose Due Date</string>
    <string name="choose_start_date">Choose Start Date</string>
    <string name="choose_days">Choose Days</string>
    <string-array name="days_of_week">
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
        <item>Sunday</item>
    </string-array>
    <string name="day_list">%1$s, %2$s</string>
    <string name="done">Done</string>
    <string name="class_list_title">Class Schedule</string>
    <string-array name="credit_hours_options">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>
    <string name="importance">Importance</string>
    <string name="add_assignment">Add Assignment</string>
    <string name="assignment_name">Assignment Name</string>
    <string name="show_assignments">Show Assignments</string>
</resources>
