<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/assignment_name"
            android:textColor="#CE0F3D"
            android:textAlignment="center"
            android:textSize="24sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:labelFor="@id/assign_name_text"
            android:text="@string/assignment_name" />

        <EditText
            android:id="@+id/assign_name_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:inputType="text"
            android:singleLine="true"
            android:hint="@string/assignment_name"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:labelFor="@id/importance_spinner"
            android:text="@string/importance"/>

        <Spinner
            android:id="@+id/importance_spinner"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="64dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="25dp"
            android:textAllCaps="false">

            <Button
                android:id="@+id/due_time_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/assign_due_time"
                android:visibility="visible"
                android:textAllCaps="false" />

            <TextView
                android:id="@+id/due_time_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="16dp"
                android:text="@string/choose_due_time" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="25dp"
            android:textAllCaps="false">

            <Button
                android:id="@+id/due_date_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/assign_due_date"
                android:visibility="visible"
                android:textAllCaps="false" />

            <TextView
                android:id="@+id/due_date_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="16dp"
                android:text="@string/choose_due_date" />

        </LinearLayout>

        <Button
            android:id="@+id/add_assign"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginTop="24dp"
            android:text="@string/add_assignment"
            android:visibility="visible"
            android:textAllCaps="false" />

    </LinearLayout>
</ScrollView>