<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/assignment_name_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_vertical"
            android:layout_weight="3"
            android:gravity="left|center_vertical"
            android:text="@string/class_name_info"
            android:textColor="@android:color/primary_text_light"
            android:textSize="30sp" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="32dp"
        android:labelFor="@id/assignment_class_name_info"
        android:text="@string/class_name"
        android:textColor="@android:color/primary_text_light"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/assignment_class_name_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:singleLine="true" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="8dp"
        android:labelFor="@id/assignment_due_time_info"
        android:text="@string/assign_due_time"
        android:textColor="@android:color/primary_text_light"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/assignment_due_time_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:singleLine="true" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="8dp"
        android:labelFor="@id/assignment_due_date_info"
        android:text="@string/assign_due_date"
        android:textColor="@android:color/primary_text_light"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/assignment_due_date_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:singleLine="true" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="8dp"
        android:labelFor="@id/assignment_importance_info"
        android:text="@string/importance"
        android:textColor="@android:color/primary_text_light"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/assignment_importance_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:singleLine="true" />

    <Button
        android:id="@+id/delete_assign_button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center_horizontal"
        android:layout_margin="40dp"
        android:gravity="center"
        android:background="@drawable/roundshapebtn"
        android:textColor="#FFFFFF"
        android:text="@string/delete_assignment"
        android:textSize="20sp"/>

</LinearLayout>